crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__named_expression.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/bool_op/named_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            Expr(
                ExprStmt {
                    range: 0..7,
                    value: BoolOp(
                        BoolOpExpr {
                            range: 0..7,
                            op: And,
                            values: [
                                Name(
                                    NameExpr {
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 6..7,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 11..12,
                    value: Name(
                        NameExpr {
                            range: 11..12,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 13..19,
                    value: BoolOp(
                        BoolOpExpr {
                            range: 13..19,
                            op: Or,
                            values: [
                                Name(
                                    NameExpr {
                                        range: 13..14,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 18..19,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 23..24,
                    value: Name(
                        NameExpr {
                            range: 23..24,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x and a := b
  |         ^^ Syntax Error: Expected a statement
2 | x or a := b
  |


  |
1 | x and a := b
2 | x or a := b
  |        ^^ Syntax Error: Expected a statement
  |
